alpm-types/tests/parse_error_snapshots/fail_to_parse_package_filename__case_01_no_name.snap
---
source: alpm-types/tests/integration.rs
description: "-1.0.0-1-x86_64.pkg.tar.zst"
expression: "format!(\"{error}\")"
---
-1.0.0-1-x86_64.pkg.tar.zst
^
invalid alpm-package-name
Parser failed with the following error:

^
invalid first character of package name
expected ASCII alphanumeric character, `_`, `@`, `+`
